--- a/Extensions.Windows/Extensions.Windows.csproj
+++ b/Extensions.Windows/Extensions.Windows.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension.cs" />
+    <Compile Include="PacketType.cs" />
     <Compile Include="PowershellParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadiusTypes.cs" />
