add login context

--- a/Accounting.API/appsettings.json
+++ b/Accounting.API/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+  },
+  "LoginApi": "http://dc.antvpn.io:5000",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
