--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=corsair.jios.org; Database=antvpnidentity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "MvcClient": "http://localhost:5100",
   "SpaClient": "http://localhost:5104",
