add cors add home

--- a/Accounting.API/appsettings.json
+++ b/Accounting.API/appsettings.json
@@ -3,6 +3,7 @@
     "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "LoginApi": "http://dc.antvpn.io:5000",
+  "IdentityUrl": "http://localhost:5105",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
