--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "CatalogUrl": "http://localhost:5101",
+  "AccountingUrl": "http://localhost:5200",
   "OrderingUrl": "http://localhost:5102",
   "BasketUrl": "http://localhost:5103",
   "IdentityUrl": "http://localhost:5105",
