--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -1,8 +1,21 @@
-﻿{
+﻿//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+//  },
+//  "MvcClient": "http://localhost:5100",
+//  "SpaClient": "http://localhost:5104",
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "LogLevel": {
+//      "Default": "Warning"
+//    }
+//  }
+//}
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
-  "MvcClient": "http://localhost:5100",
+  "MvcClient": "http://antvpn.io",
   "SpaClient": "http://localhost:5104",
   "Logging": {
     "IncludeScopes": false,
