--- a/Ordering.API/appsettings.json
+++ b/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.ordering;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.ordering;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "IdentityUrl": "http://localhost:5105",
   "Logging": {
