--- a/Accounting.API/appsettings.json
+++ b/Accounting.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=corsair.jios.org; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "LoginApi": "http://dc.antvpn.io:5000",
   "IdentityUrl": "http://localhost:5105",
