--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -1,9 +1,24 @@
-﻿{
+﻿//{
+//  "CatalogUrl": "http://localhost:5101",
+//  "AccountingUrl": "http://localhost:5200",
+//  "OrderingUrl": "http://localhost:5102",
+//  "BasketUrl": "http://localhost:5103",
+//  "IdentityUrl": "http://localhost:5105",
+//  "CallBackUrl": "http://localhost:5100/",
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "LogLevel": {
+//      "Default": "Warning"
+//    }
+//  }
+//}
+{
   "CatalogUrl": "http://localhost:5101",
-  "AccountingUrl": "http://localhost:5200",
+  "AccountingUrl": "http://antvpn.io:82",
   "OrderingUrl": "http://localhost:5102",
   "BasketUrl": "http://localhost:5103",
-  "IdentityUrl": "http://localhost:5105",
+  "IdentityUrl": "http://antvpn.io:81",
+  "MvcClient": "http://antvpn.io",
   "CallBackUrl": "http://localhost:5100/",
   "Logging": {
     "IncludeScopes": false,
