--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -14,10 +14,10 @@
 //}
 {
   "CatalogUrl": "http://localhost:5101",
-  "AccountingUrl": "http://antvpn.io:82",
+  "AccountingUrl": "http://accounting.antvpn.io",
   "OrderingUrl": "http://localhost:5102",
   "BasketUrl": "http://localhost:5103",
-  "IdentityUrl": "http://antvpn.io:81",
+  "IdentityUrl": "http://login.antvpn.io",
   "MvcClient": "http://antvpn.io",
   "CallBackUrl": "http://localhost:5100/",
   "Logging": {
