change routerrepoter to sql server

--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -11,4 +11,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="interval" value="10"/>
+    <add key="connectionString" value="Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+  </appSettings>
 </configuration>
