--- a/Accounting.RouterReporter/packages.config
+++ b/Accounting.RouterReporter/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net462" />
-  <package id="MongoDB.Driver" version="2.4.3" targetFramework="net462" />
-  <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net462" />
+  <package id="Dapper" version="1.50.2" targetFramework="net462" />
   <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
 </packages>
