--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -1,21 +1,8 @@
-﻿//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
-//  },
-//  "MvcClient": "http://localhost:5100",
-//  "SpaClient": "http://localhost:5104",
-//  "Logging": {
-//    "IncludeScopes": false,
-//    "LogLevel": {
-//      "Default": "Warning"
-//    }
-//  }
-//}
-{
+﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
-  "MvcClient": "http://antvpn.io",
+  "MvcClient": "http://localhost:5100",
   "SpaClient": "http://localhost:5104",
   "Logging": {
     "IncludeScopes": false,
@@ -24,3 +11,16 @@
     }
   }
 }
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+//  },
+//  "MvcClient": "http://antvpn.io",
+//  "SpaClient": "http://localhost:5104",
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "LogLevel": {
+//      "Default": "Warning"
+//    }
+//  }
+//}
