--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
-  "MvcClient": "http://localhost:5100",
+  "MvcClient": "http://antvpn.io",
   "SpaClient": "http://localhost:5104",
   "Logging": {
     "IncludeScopes": false,
@@ -11,16 +11,3 @@
     }
   }
 }
-//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Server=bosxixi.com; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
-//  },
-//  "MvcClient": "http://antvpn.io",
-//  "SpaClient": "http://localhost:5104",
-//  "Logging": {
-//    "IncludeScopes": false,
-//    "LogLevel": {
-//      "Default": "Warning"
-//    }
-//  }
-//}
