--- a/Accounting.API/appsettings.Development.json
+++ b/Accounting.API/appsettings.Development.json
@@ -1,4 +1,12 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;",
+    "ADConnection": "Server=54.191.184.219; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+  },
+  "option1": "value1_from_json",
+  "option2": 2,
+  "LoginApi": "http://dc.antvpn.io:5000",
+  "IdentityUrl": "http://localhost:5105",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
