--- a/Identity.API/appsettings.Development.json
+++ b/Identity.API/appsettings.Development.json
@@ -1,6 +1,10 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+  },
+  "MvcClient": "http://localhost:5100",
+  "SpaClient": "http://localhost:5104",
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
