--- a/Login.API/Accounting.Distributed.LoginManagement.API.csproj
+++ b/Login.API/Accounting.Distributed.LoginManagement.API.csproj
@@ -5,7 +5,12 @@
     <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
     <DocumentationFile>login.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Properties\PublishProfiles\FolderProfile.pubxml" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="UserManager.psm1">
@@ -17,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
@@ -29,9 +35,6 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Extensions.Windows\Extensions.Windows.csproj" />
   </ItemGroup>
 
 </Project>
