--- a/WebMVC/appsettings.Development.json
+++ b/WebMVC/appsettings.Development.json
@@ -1,10 +1,14 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "CatalogUrl": "http://localhost:5101",
+  "AccountingUrl": "http://localhost:5200",
+  "OrderingUrl": "http://localhost:5102",
+  "BasketUrl": "http://localhost:5103",
+  "IdentityUrl": "http://localhost:5105",
+  "CallBackUrl": "http://localhost:5100/",
+  "IncludeScopes": false,
+  "LogLevel": {
+    "Default": "Debug",
+    "System": "Information",
+    "Microsoft": "Information"
   }
 }
