--- a/Server.API/Properties/launchSettings.json
+++ b/Server.API/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "Server.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "Home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
