--- a/Server.API/appsettings.Development.json
+++ b/Server.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+  },
+  "IdentityUrl": "http://localhost:5105",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
