--- a/Server.API/appsettings.json
+++ b/Server.API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
-  "IdentityUrl": "http://localhost:5105",
+  "IdentityUrl": "http://login.antvpn.io",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
