--- a/WebMVC/appsettings.Development.json
+++ b/WebMVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 ﻿{
   "CatalogUrl": "http://localhost:5101",
   "AccountingUrl": "http://localhost:5200",
+  "ServerUrl": "http://localhost:5500",
   "OrderingUrl": "http://localhost:5102",
   "BasketUrl": "http://localhost:5103",
   "IdentityUrl": "http://localhost:5105",
