--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "CatalogUrl": "http://localhost:5101",
   "AccountingUrl": "http://accounting.antvpn.io",
+  "ServerUrl": "http://server.antvpn.io",
   "OrderingUrl": "http://localhost:5102",
   "BasketUrl": "http://localhost:5103",
   "IdentityUrl": "http://login.antvpn.io",
