--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -14,5 +14,6 @@
   <appSettings>
     <add key="interval" value="10"/>
     <add key="connectionString" value="Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+    <add key="connectionStringDc" value="Server=dc.antvpn.io; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
   </appSettings>
 </configuration>
