--- a/WebMVC/bower.json
+++ b/WebMVC/bower.json
@@ -6,10 +6,10 @@
     "jquery-validation": "1.16.0",
     "jquery-validation-unobtrusive": "3.2.6",
     "Winstrap": "winstrap#v0.5.11",
-    "chart.js": "Chart.js#v2.5.0"
+    "chart.js": "Chart.js#v2.5.0",
+    "winjs": "v4.4.3"
   },
   "resolutions": {
-    "bootstrap": "v4.0.0-alpha.6",
     "jquery": "3.1.1",
     "jquery-validation": "1.16.0"
   }
