--- a/Extensions.Windows/Extensions.Windows.csproj
+++ b/Extensions.Windows/Extensions.Windows.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcctRaw.cs" />
     <Compile Include="Extension.cs" />
-    <Compile Include="PacketType.cs" />
     <Compile Include="PowershellParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadiusTypes.cs" />
