--- a/Windows/packages.config
+++ b/Windows/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net462" />
-  <package id="MvvmLight" version="5.3.0.0" targetFramework="net462" />
-  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net462" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net462" />
+  <package id="Fody" version="1.29.2" targetFramework="net462" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net462" developmentDependency="true" />
 </packages>
