--- a/Windows/App.config
+++ b/Windows/App.config
@@ -5,6 +5,7 @@
     </startup>
   <appSettings>
     <add key="IdentityUrl" value="http://login.antvpn.io"/>
+    <add key="ServerUrl" value="http://server.antvpn.io"/>
     <add key="IdentityUrlDev" value="http://localhost:5105"/>
   </appSettings>
 </configuration>
