--- a/Windows/packages.config
+++ b/Windows/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net462" />
   <package id="Fody" version="1.29.4" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net462" developmentDependency="true" />
