--- a/Windows/packages.config
+++ b/Windows/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotRas.for.Win8" version="1.3.0" targetFramework="net462" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net462" />
   <package id="Fody" version="1.29.4" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net462" developmentDependency="true" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net462" />
 </packages>
