--- a/Accounting.RouterReporter/Accounting.Distributed.RouterReporter.csproj
+++ b/Accounting.RouterReporter/Accounting.Distributed.RouterReporter.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Meta.cs" />
+    <Compile Include="PowershellParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repo.cs" />
@@ -85,12 +86,6 @@
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Extensions.Windows\Extensions.Windows.csproj">
-      <Project>{5d3ac256-2f24-4425-a00a-af57ac6f7bd0}</Project>
-      <Name>Extensions.Windows</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.2">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.6.2 %28x86 and x64%29</ProductName>
@@ -102,5 +97,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
