--- a/Login.API/Accounting.Distributed.LoginManagement.API.csproj
+++ b/Login.API/Accounting.Distributed.LoginManagement.API.csproj
@@ -36,5 +36,6 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
+  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
 
 </Project>
