--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -13,6 +13,7 @@
   </runtime>
   <appSettings>
     <add key="interval" value="10"/>
+    <add key="perfCounterInterval" value="5"/>
     <add key="connectionString" value="Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
     <add key="connectionStringDc" value="Server=dc.antvpn.io; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
   </appSettings>
