--- a/Server.API/Server.API.csproj
+++ b/Server.API/Server.API.csproj
@@ -26,5 +26,6 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
+  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
 
 </Project>
