update sql server address

--- a/Accounting.API/appsettings.Development.json
+++ b/Accounting.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;",
+    "DefaultConnection": "Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;",
     "ADConnection": "Server=54.191.184.219; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "option1": "value1_from_json",
