--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -14,8 +14,8 @@
   <appSettings>
     <add key="interval" value="10"/>
     <add key="perfCounterInterval" value="300"/>
-    <add key="connectionString" value="Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
-    <add key="connectionStringServer" value="Server=sqlserver.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
-    <add key="connectionStringDc" value="Server=dc.antvpn.io; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+    <add key="connectionString" value="Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+    <add key="connectionStringServer" value="Server=sql.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+    <add key="connectionStringDc" value="Server=sql.antvpn.io.antvpn.io; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
   </appSettings>
 </configuration>
