--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=sql.antvpn.io; Database=antvpn.identity;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "MvcClient": "http://antvpn.io",
   "SpaClient": "http://localhost:5104",
