--- a/Server.API/appsettings.json
+++ b/Server.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "DefaultConnection": "Server=sql.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "IdentityUrl": "http://login.antvpn.io",
   "Logging": {
