--- a/Accounting.API/appsettings.Development.json
+++ b/Accounting.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;",
-    "ADConnection": "Server=54.191.184.219; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
+    "ADConnection": "Server=sql.antvpn.io; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"
   },
   "option1": "value1_from_json",
   "option2": 2,
