--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -14,6 +14,11 @@
   <appSettings>
     <add key="interval" value="10"/>
     <add key="perfCounterInterval" value="300"/>
+    <add key="ReportRouterInfo" value="true"/>
+    <add key="ReportServerHealth" value="true"/>
+    <add key="UpdateShadowsocksUsers" value="true"/>
+    <add key="ShadowsocksManageAddress" value="127.0.0.1"/>
+    <add key="ShadowsocksManagePort" value="6001"/>
     <add key="connectionString" value="Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
     <add key="connectionStringServer" value="Server=sql.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
     <add key="connectionStringDc" value="Server=sql.antvpn.io; Database=antvpn.login;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
