add GetSSAccountings ss password same as account password change LoginStatus for ss add cache for server copy function for server domain add Shadowsocks Protocal add Shadowsocks usage

--- a/Accounting.API/Accounting.API.csproj
+++ b/Accounting.API/Accounting.API.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="Swashbuckle" Version="6.0.0-beta902" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
     <PackageReference Include="WinInsider.System.Net.Http.Formatting" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
