Shadowsocks report improve

--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -16,7 +16,7 @@
     <add key="perfCounterInterval" value="300"/>
     <add key="ReportRouterInfo" value="true"/>
     <add key="ReportServerHealth" value="true"/>
-    <add key="UpdateShadowsocksUsers" value="true"/>
+    <add key="Shadowsocks" value="true"/>
     <add key="ShadowsocksManageAddress" value="127.0.0.1"/>
     <add key="ShadowsocksManagePort" value="6001"/>
     <add key="connectionString" value="Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
