--- a/Accounting.RouterReporter/Accounting.Distributed.RouterReporter.csproj
+++ b/Accounting.RouterReporter/Accounting.Distributed.RouterReporter.csproj
@@ -78,6 +78,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CouterName.cs" />
+    <Compile Include="ILog.cs" />
+    <Compile Include="ILoginRepo.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="LoginComparer.cs" />
     <Compile Include="Meta.cs" />
@@ -85,10 +87,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repo.cs" />
-    <Compile Include="ShadowsocksBase.cs" />
     <Compile Include="ShadowsocksStat.cs" />
-    <Compile Include="ShadowsocksUserManager.cs" />
+    <Compile Include="Shadowsocks.cs" />
     <Compile Include="SSCommand.cs" />
+    <Compile Include="WindowsEventLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
