--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -14,10 +14,10 @@
   <appSettings>
     <add key="interval" value="10"/>
     <add key="perfCounterInterval" value="300"/>
-    <add key="ReportRouterInfo" value="true"/>
-    <add key="ReportServerHealth" value="true"/>
+    <add key="ReportRouterInfo" value="false"/>
+    <add key="ReportServerHealth" value="false"/>
     <add key="Shadowsocks" value="true"/>
-    <add key="ShadowsocksManageAddress" value="127.0.0.1"/>
+    <add key="ShadowsocksManageAddress" value="52.175.18.25"/>
     <add key="ShadowsocksManagePort" value="6001"/>
     <add key="connectionString" value="Server=sql.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
     <add key="connectionStringServer" value="Server=sql.antvpn.io; Database=antvpn.server;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
