--- a/Iptable/App.config
+++ b/Iptable/App.config
@@ -4,8 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
   <appSettings>
-    <add key="ports" value="20000:20100"/>
-    <add key="VPNServerIPAddress" value="51.140.127.196"/>
+    <!--<add key="ports" value="20000:20100"/>-->
+    <add key="ports" value="443,1723,1701,500,4500,20000:20100"/>
+    <add key="VPNServerIPAddress" value="52.175.18.25"/>
     <add key="RedirectorInternalIPAddress" value="10.0.0.4"/>
     <add key="PathToSave" value="d:/iptables.txt"/>
   </appSettings>
